[tool.poetry]
name = "bello-datahub"
version = "0.1.0"
description = ""
authors = ["mesodiar <mils.meso@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
acryl-datahub = {version = "0.8.15.0", extras = ["airflow", "bigquery", "mysql", "datahub-rest"]}
google-cloud-bigquery-storage = "2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
